// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnknownElement in development should render a warning 1`] = `
<div
  style={
    Object {
      "backgroundColor": "red",
      "color": "white",
    }
  }
>
  Nodetype is undefined. Check the console for more info.
</div>
`;

exports[`UnknownElement in development should render a warning and the children 1`] = `
<div
  style={
    Object {
      "backgroundColor": "red",
      "color": "white",
    }
  }
>
  Nodetype is undefined. Check the console for more info.
  <p>
    Foo
  </p>
</div>
`;

exports[`UnknownElement in production should render null 1`] = `null`;

exports[`UnknownElement in production should render the children 1`] = `
<p>
  Bar
</p>
`;
